{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "cb96aa66-11bb-44b2-9203-cd6d38218c48",
            "actions": [
                {
                    "name": "Joystick",
                    "type": "Value",
                    "id": "e9bc22d0-8d77-4420-8dc2-4a5bc90611e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressedJump",
                    "type": "Button",
                    "id": "6f1c4c30-d437-41f2-9352-305b8c66c89a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressedDash",
                    "type": "Button",
                    "id": "22d92e6e-32b2-48c8-988c-756690fb60a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressedClimb",
                    "type": "Button",
                    "id": "109146c2-e4ce-437a-a1a1-a75f7f007e52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "16adc8a6-8879-490a-801e-8df4256c8c63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c23648fd-e7e9-40b0-9f2a-99d22759780f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Climb",
                    "type": "Button",
                    "id": "e51113d8-54d9-4a7d-9d8d-c517a32e91c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4c12273-067e-45f9-9d8a-4d5b4a5445f9",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fe836676-7bd9-4670-a3e0-e2e671ad45a0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "85efddcd-7a4f-446a-a8a9-fde0ede62d59",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0dd7cae6-e276-4c9c-a47a-ab879c562768",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e190ced7-bb9b-48be-a559-7a630906b786",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "395ebc27-64f2-4dfe-8094-e967bd9e2e80",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "f026d1c0-82d8-439d-84c7-d0b432e43667",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6f929f43-a34c-4f1a-944e-34dc5388fb02",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "89fdf1e6-8a64-460d-9d8c-bb9f09be51d4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "86144374-edb5-4269-8173-e1cd670c7d91",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bda79f8e-f9e7-4b92-9742-3cadf712d4a7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Joystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4a98c873-9fb1-439c-b7c4-ead9e7a96a7f",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PressedJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0658e34-b32c-4615-b48f-03c719fcf89a",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PressedJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19b83624-fc78-4d00-8865-143a1da5845b",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressedDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "577cecb5-0cb2-4d6e-a67b-3a4aad0f8e10",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressedClimb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab8c630f-9f9b-4b8f-a468-656274e67431",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Hold(duration=0.34,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50964e99-880a-4b2e-8088-b6856e6c9b62",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f67372e-ca1b-4a1c-b814-bccf5d2e0cfe",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e9b4724-6e72-4f59-9748-b35c921b4464",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}